# Restaurant_app

./: .gitlab-ci.yml  CMakeLists.txt  full_code_in_file.cpp
.circleci/: config.yml
include/: MenuItem.h  OrderItem.h  Restaurant.h
src/: Restaurant.cpp  main.cpp
tests/: test_clearorder.cpp  test_emptyorder.cpp  test_ids.cpp  test_largequantity.cpp  test_menu.cpp  test_orderitem.cpp  test_setname.cpp
